Creatin Header section, Hero Slider section

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -4,3 +4,8 @@
 
 // * GENERAL, BEM STYLES IMPORTS * 
 @import 'general/general';
+
+//  *COMPONENTS IMPORTS *
+
+@import 'components/header';
+@import 'components/hero__slider';
