--- a/src/scss/components/_hero__slider.scss
+++ b/src/scss/components/_hero__slider.scss
@@ -5,6 +5,7 @@
     .hero__slider__wrapper {
         max-width: 100%;
         margin: 0 auto;
+        position: relative;
 
         &-slide {
             position: relative;
@@ -16,46 +17,177 @@
             left: 50%;
             transform: translateX(-50%);
             @include displayFlex($flexElementAlign: center);
-            padding: 0 3%;
+            padding: 0 13.8%;
+            border: none;
 
             .slide__description {
-                &-collection {
-                    display: block;
-                    font-size: 15px;
-                    font-weight: 400;
-                    color: #aaa;
-                    padding-bottom: 15px;
+                flex: 0 0 100%;
+                @include displayFlex($flexElementAlign: center);
+                height: 100%;
+
+                &-text {
+                    flex: 0 0 40%;
+
+                    .collection {
+                        display: block;
+                        font-size: 15px;
+                        font-weight: 400;
+                        color: #aaa;
+                        padding-bottom: 15px;
+                    }
+
+                    .title {
+                        font-size: 60px;
+                        font-weight: 700;
+                        padding-bottom: 20px;
+
+                        span {
+                            display: inline-block;
+                            line-height: 1;
+                            position: relative;
+
+                            &:after {
+                                position: absolute;
+                                content: '';
+                                bottom: -3px;
+                                left: 10px;
+                                background: #fff;
+                                width: 100%;
+                                height: 30px;
+                                z-index: -1;
+                            }
+                        }
+                    }
+
+                    .breadcrumps {
+                        font-size: 20px;
+                        font-weight: 400;
+
+                    }
+
+
                 }
 
-                &-title {
-                    font-size: 60px;
-                    font-weight: 700;
-                    padding-bottom: 20px;
+                &-img {
+                    flex: 0 0 60%;
+                    margin-left: -20px;
 
-                    span {
-                        display: inline-block;
-                        line-height: 1;
-                        position: relative;
+                    img {
+                        display: block;
+                        padding-top: 130px;
+                        width: 720px;
 
+                    }
+                }
+
+            }
+
+            &.black-crown {
+                background: #1a1b16;
+
+                .slide__description {
+                    &-text {
+                        .title {
+                            span {
+                                color: #fff;
+
+                                &:after {
+                                    background: #0083AF;
+                                }
+                            }
+                        }
+
+                        .breadcrumps {
+                            color: #fff;
+                        }
+                    }
+
+                    &-img {
+                        img {
+                            position: relative;
+                            bottom: -100px;
+                        }
+                    }
+                }
+            }
+        }
+
+        .slick-dots {
+            position: absolute;
+            bottom: 0;
+            right: 0;
+            padding: 0 13.8%;
+            top: 50%;
+            transform: translateY(-50%);
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+
+            li {
+                button {
+                    border: none;
+                    background: transparent;
+                    position: relative;
+                    font-family: 'Raleway', sans-serif;
+                    outline: none;
+                    font-size: 18px;
+                    margin-bottom: 10px;
+
+
+                    &:hover {
+                        cursor: pointer;
+
+                    }
+
+                    &:before {
+                        content: '0';
+                        position: absolute;
+                        left: -4px;
+                        top: 1px;
+
+                    }
+
+                }
+
+                &.slick-active {
+
+                    button {
                         &:after {
-                            position: absolute;
                             content: '';
-                            bottom: -3px;
-                            left: 10px;
-                            background: #fff;
+                            position: absolute;
                             width: 100%;
-                            height: 30px;
-                            z-index: -1;
+                            bottom: -3px;
+                            height: 1.2px;
+                            left: -3px;
+                            background: #000;
                         }
                     }
                 }
 
-                &-breadcrumps {
-                    font-size: 20px;
-                    font-weight: 400;
-
-                }
             }
+
+            &.white {
+                li {
+                    button {
+                        color: #fff;
+                    }
+
+                    &.slick-active {
+                        button {
+                            color: #fff;
+
+                            &:after {
+                                background: #fff;
+                            }
+                        }
+                    }
+                }
+
+            }
+        }
+
+        .slick-slide {
+            border: none;
         }
     }
 }
